Fixed font size for readability and style link

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 12px;
+    font-size: 14px;
     color: black;
 }
